# ep2-ai-agent-bake-off

./: .gitignore  NEW_README.md  README.md  user_personas.json
ep2-sandbox/: .cloud-run-deploy  .cloud-run-deploy-frontend.sh  .cloud-run-deploy.sh  .gitignore  CHATBOT_ARCHITECTURE_SUMMARY.md  Dockerfile  README.md  compose.env  docker-compose.yml  pyproject.toml
ep2-sandbox/agent/: run_agent.py  steward.py
ep2-sandbox/agent/council/: banker.py  tax_strategist.py  wealth_planner.py
ep2-sandbox/agent/tools/: financial_tools.py
ep2-sandbox/backend/: API_REFERENCE.md  Dockerfile  QUICKSTART.md  README.md  cloudbuild.yaml  main.py  pyproject.toml
ep2-sandbox/backend/api/: API_OVERVIEW.md  models.py
ep2-sandbox/backend/api/endpoints/: accounts.py  financials.py  goals.py  partners.py  transactions.py  users.py
ep2-sandbox/backend/code/: main.py  requirements.txt
ep2-sandbox/backend/code/api/: API_OVERVIEW.md  models.py
ep2-sandbox/backend/db/: bank_partners.json  schema_documentation.md  transactions.json  user_personas.json
ep2-sandbox/db/: accounts.json  life_goals.json  transactions.json  user_personas.json  users.json
ep2-sandbox/frontend/: .env  Dockerfile  Dockerfile0ld  README.md  cloudbuild.yaml  nginx.conf  package-lock.json  package.json  postcss.config.js  sample.html  vite.config.ts
ep2-sandbox/frontend/src/: App.tsx  index.css
ep2-sandbox/scripts/: generate_mock_data.py
ep2-sandbox/tests/: debug_proxy.py  test_api.py  test_api_output.txt  test_production_flow.py
ep2-sandbox/tests/a2a_agent_tests/: README.md  test_a2a_agent.py
(+71 files in other folders)
